Cassandra BTree + VM.native_memory summary